test/tests/errors/error-array-non-storeable.sm
// true
// false
// false
/**/
/**/

program {
    array x[1:1]: proc();
}